--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 	<groupId>com.xiaoleilu</groupId>
 	<artifactId>loServer</artifactId>
 	<version>0.3.0</version>
+	<name>loServer</name>
 	<description>基于Netty的嵌入式应用服务器</description>
 	<url>https://github.com/looly/loServer</url>
 	
@@ -64,7 +65,7 @@
 		<dependency>
 			<groupId>com.xiaoleilu</groupId>
 			<artifactId>hutool</artifactId>
-			<version>2.11.4</version>
+			<version>2.11.5</version>
 		</dependency>
 		<dependency>
 			<groupId>io.netty</groupId>
