--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,16 @@
 <?xml version='1.0' encoding='utf8'?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<packaging>jar</packaging>
-	
+
 	<groupId>com.xiaoleilu</groupId>
 	<artifactId>loServer</artifactId>
-	<version>0.5.3</version>
+	<version>0.5.4</version>
 	<name>loServer</name>
 	<description>基于Netty的嵌入式应用服务器</description>
 	<url>https://github.com/looly/loServer</url>
-	
+
 	<licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
@@ -36,7 +35,7 @@
 		<project.build.sourceEncoding>UTF8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF8</project.reporting.outputEncoding>
 	</properties>
-	
+
 	<build>
 		<!-- 最终打包后的名称 -->
 		<finalName>loServer</finalName>
@@ -57,15 +56,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>1.1.3</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>com.xiaoleilu</groupId>
 			<artifactId>hutool</artifactId>
-			<version>2.12.4</version>
+			<version>2.13.0</version>
 		</dependency>
 		<dependency>
 			<groupId>io.netty</groupId>
@@ -73,64 +66,12 @@
 			<version>4.0.33.Final</version>
 		</dependency>
 		<dependency>
-			<groupId>io.netty</groupId>
-			<artifactId>netty-example</artifactId>
-			<version>4.0.33.Final</version>
-			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<artifactId>netty-transport</artifactId>
-					<groupId>io.netty</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>netty-transport-sctp</artifactId>
-					<groupId>io.netty</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>netty-handler</artifactId>
-					<groupId>io.netty</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>netty-codec-http</artifactId>
-					<groupId>io.netty</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>netty-codec-socks</artifactId>
-					<groupId>io.netty</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>protobuf-java</artifactId>
-					<groupId>com.google.protobuf</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>netty-tcnative</artifactId>
-					<groupId>io.netty</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>npn-api</artifactId>
-					<groupId>org.eclipse.jetty.npn</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>metrics-core</artifactId>
-					<groupId>com.yammer.metrics</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>netty-transport-udt</artifactId>
-					<groupId>io.netty</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>netty-transport-rxtx</artifactId>
-					<groupId>io.netty</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
 			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
 			<version>3.20.0-GA</version>
 		</dependency>
 	</dependencies>
-	
+
 	<profiles>
 		<profile>
 			<id>release</id>
@@ -193,5 +134,5 @@
 			</build>
 		</profile>
 	</profiles>
-	
+
 </project>
