--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 		<dependency>
 			<groupId>com.xiaoleilu</groupId>
 			<artifactId>hutool</artifactId>
-			<version>2.15.9</version>
+			<version>2.15.11</version>
 		</dependency>
 		<dependency>
 			<groupId>io.netty</groupId>
@@ -68,7 +68,14 @@
 		<dependency>
 			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
-			<version>3.20.0-GA</version>
+			<version>3.21.0-GA</version>
+		</dependency>
+		<!-- LogBack -->
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.1.7</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
