--- a/pom.xml
+++ b/pom.xml
@@ -56,9 +56,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.xiaoleilu</groupId>
-			<artifactId>hutool</artifactId>
-			<version>2.15.11</version>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-all</artifactId>
+			<version>4.4.5</version>
 		</dependency>
 		<dependency>
 			<groupId>io.netty</groupId>
